test_data/Xml/Unexpected/Unserializable/InvalidClassName/submodelElementList/wrong.xml.exception
Expected an element representing an instance of class SubmodelElementList with element name submodelElementList, but got: utterlyInvalid at: the beginning